--- a/case_4/analyze.ipynb
+++ b/case_4/analyze.ipynb
@@ -1305,6 +1305,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['!', '\"', '\"1764\"', ..., 'zone', 'zone.', 'zooming.'],\n",
+       "      dtype='<U24')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.unique(tot_word)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1313,6 +1336,55 @@
     "What I would do to go further is clean a bit the word that we extracted so punctuation would not bother.\n",
     "\n",
     "After I would analyze the count of aspect per words. Maybe we just have to use a simple logsitic regression if the words have always the same aspect."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-------\n",
+    "\n",
+    "Probably the best approach (without deep learning) would be to use word2vec vectors then apply a CRF on those features to predict the aspect.\n",
+    "\n",
+    "If word2vec is not interpretable enough we could just use a one-hot encoding features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# cf https://github.com/scrapinghub/python-crfsuite/blob/master/examples/CoNLL%202002.ipynb\n",
+    "import pycrfsuite"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%time\n",
+    "# trainer = pycrfsuite.Trainer(verbose=False)\n",
+    "\n",
+    "# x_train \n",
+    "# for xseq, yseq in zip(X_train, y_train):\n",
+    "#     trainer.append(xseq, yseq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# %%time\n",
+    "# trainer.train('conll2002-esp.crfsuite')"
    ]
   },
   {
